# rustier-chess

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  rustfmt.toml
benches/: bot.rs  move_generation.rs
rustier_chess/engine/: bin.rs  lib.rs  perft.rs
rustier_chess/engine/benches/: move_generation.rs
rustier_chess/engine/magic/: magic_generation.rs
rustier_chess/engine/moves/: mod.rs  move_mask_gen.rs  moves_calculation.rs  moves_utils.rs
rustier_chess/engine/types/: bitboard.rs  piece.rs
rustier_chess/engine/utils/: mod.rs
rustier_chess/gui/: main.py
src/: bitboard.rs  bitmap.rs  board.rs  game.rs  lib.rs  main.rs  perft.rs  piece.rs  square.rs  state.rs  utils.rs
src/bots/: bot.rs  mod.rs  pesto.rs  time_control.rs  transposition.rs
src/magic/: magic_generation.rs  magics.rs  mod.rs
src/moves/: mod.rs  move_gen.rs  move_mask_gen.rs  moves_calculation.rs  moves_utils.rs
src/types/: bitboard.rs  mod.rs  piece.rs  square.rs  state.rs
src/utils/: polyglot_array.rs  zobrist.rs
