[package]
name = "rustier-chess"
version = "0.1.0"
edition = "2021"
authors = ["Ales"]

[dependencies]
serde_derive = "1.0.217"
serde = "1.0.217"
bincode = "1.3.3"
rand = "0.9.0"
rayon = "1.10.0"
itertools = "0.14.0"

[dev-dependencies]
once_cell = "1.20.2"

[[bench]]
name = "move_generation"
harness = false

[[bench]]
name = "bot"
harness = false